# FlowLang

backend/: .gitattributes  .gitignore  pyproject.toml
backend-next/: .gitattributes  pyproject.toml
backend-next/app/: main.py
backend-next/app/api/v1/: __init__.py  article.py  word.py
backend-next/app/core/: __init__.py
backend-next/app/domain/: article.py
backend-next/app/llm/: client.py  schemas.py
backend-next/app/repos/: base_repo.py  sentence_repo.py  word_repo.py
backend-next/app/schemas/: __init__.py  article.py  mindmap.py
backend-next/app/services/: language_loader_service.py  mindmap_service.py
backend-next/resources/: chinese_freq.parquet  english_freq.parquet
backend/alembic/: env.py
backend/alembic/versions/: 20976e7534c9_init.py  4e44124fd451_init.py  531961b085ab_init.py  64a5f2ea3c17_init.py  66657c0987d4_init.py  7bb6a141c92e_init.py  8a6c63432fcd_init.py  cf0f4c82fa9f_init.py  fb4ae4c5444f_init.py
backend/app/: main.py  nlp_utils.py
backend/app/api/v1/: article.py  word.py
backend/app/content/: __init__.py
backend/app/core/: __init__.py  setting.py  settings.py
backend/app/db/: engine.py
backend/app/domain/: __init__.py  article.py
backend/app/llm_schema/: mindmap.py
backend/app/middlewares/: exception_handler.py
backend/app/models/: base.py
backend/app/nlp/: word.py
backend/app/repos/: __init__.py  mindmap_repo.py  raw_article_repo.py  sentence_repo.py  word_lookup_repo.py  word_repo.py
backend/app/schemas/: __init__.py  article.py  lookup.py
backend/app/services/: article_service.py  language_loader.py  lookup_service.py  mindmap_service.py  raw_article_service.py
backend/resources/: chinese_freq.parquet  english_freq.parquet  japanese_freq.parquet
dev/: Makefile  docker-compose-dev.yaml
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/api/: article.ts  client.ts  lookup.ts
frontend/src/hooks/: useAnnotatedArticle.ts  useAnnotatedArticle.tsx  useMindmapFlow.tsx
frontend/src/routes/: index.tsx  mindmap.tsx
frontend/src/services/: article.tsx
frontend/src/type/: article.ts  lookup.ts  mindTreeNode.ts
