[project]
name = "flowlang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Fledge Shiu", email = "xzk0701@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi[all,standard]>=0.122.0",
    "spacy>=3.8.11",
    "trafilatura>=2.0.0",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "zh_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/zh_core_web_lg-3.8.0/zh_core_web_lg-3.8.0-py3-none-any.whl",
    "ja_core_news_lg @ https://github.com/explosion/spacy-models/releases/download/ja_core_news_lg-3.8.0/ja_core_news_lg-3.8.0-py3-none-any.whl",
    "langchain>=1.1.0",
    "sqlalchemy[postgresql-psycopg]>=2.0.44",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "returns>=0.26.0",
    "langdetect>=1.0.9",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
    "polars>=1.35.2",
    "langchain-openai>=1.1.0",
    "db-models",
]

[dependency-groups]
dev = ["pyright>=1.1.407", "db-migration"]

[project.scripts]
flowlang = "flowlang:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
db-models = { workspace = true }
db-migration = { workspace = true }

[tool.uv.workspace]
members = ["packages/db-models", "packages/db-migration"]


[tool.uv.build-backend]
module-root = ""
module-name = "app"

[tool.pyright]
venvPath = '.'
venv = ".venv"
exclude = ['.venv']

[tool.pytest.ini_options]
asyncio_mode = "auto"
