[project]
name = "flowlang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Fledge Shiu", email = "xzk0701@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["db-models", "repos", "document-ingestion"]

[dependency-groups]
dev = ["pyright>=1.1.407", "db-migration"]

[project.scripts]
flowlang = "flowlang:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
db-models = { workspace = true }
db-migration = { workspace = true }
repos = { workspace = true }
document-ingestion = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/db-models",
    "packages/db-migration",
    "packages/repos",
    "packages/document-ingestion",
]


[tool.uv.build-backend]
module-root = ""
module-name = "app"

[tool.pyright]
venvPath = '.'
venv = ".venv"
exclude = ['.venv']

[tool.pytest.ini_options]
asyncio_mode = "auto"
